<resources>
    <string name="app_name">MyAppOtherServer</string>
    <string name="action_settings">Settings</string>
    <string name="clear">Clear</string>
    <string name="title_activity_show_results">ShowResultsActivity</string>
    <string name="show_results">Show Results..</string>
    <string name="rest_country">REST Countries</string>
    <string name="insert_field">Insert region or country</string>
    <string name="countries_region">Find Countries from Region</string>
    <string name="find_population">Find number population of a country</string>
    <string name="find_capital">Find the capital of the country</string>
    <string name="three_letters">Type only the 3 first letters of the country.</string>
    <string name="complete_word">Type the complete word</string>
    <string name="region">Type region like: Africa, Asia, Europe, Americas and Oceania</string>

</resources>
