<?xml version="1.0" encoding="utf-8"?>

 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="se.paulo.nackademin.myapiotherserver.MainActivity"
        tools:showIn="@layout/activity_main">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rest_country"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"/>

        <EditText
            android:id="@+id/edtRegion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_field"/>

        <Button
            android:id="@+id/btnFindCountries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/countries_region"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorAccent"/>

        <Button
            android:id="@+id/btnFindPopulation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_population"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorAccent"/>

        <Button
            android:id="@+id/btnFindCapital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_capital"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorAccent"/>

        <include layout="@layout/progressbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

       <ScrollView
           android:layout_width="match_parent"
           android:layout_height="300dp"
           android:background="#ffffff">

              <TextView
                  android:id="@+id/txtShowResults"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/show_results"
                  android:scrollbars="vertical"
                  android:textStyle="italic"
                  android:textColor="@color/colorAccent"
                  android:textSize="18sp"/>

       </ScrollView>

    </LinearLayout>
